<resources>
    <string name="app_name">ApplicationProject</string>
    <string name="nextWeek"><![CDATA[->]]></string>
    <string name="goNext">Week -></string>
    <string name="goBack"><![CDATA[<- Week]]></string>
    <string name="Calendar">Schedule</string>
    <string name="SignUp">Sign Up</string>
    <string name="Cancel">Cancel</string>
    <string name="Return">Go Back</string>
    <string name="Go">Go</string>
    <string name="month_day_month_day">MONTH / DAY - MONTH / DAY</string>
    <string name="MainActivityTitle">Rexburg Animal Shelter</string>
    <string name="newsTitle">News</string>
    <string name="volunteerListButton">Volunteer List</string>
    <string name="createNewsButton">Create News</string>
    <string name="volunteerButton">Volunteer</string>
    <string name="loginButton">Login</string>
    <string name="tempString">New Msg</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
